FIX improve file manager and hints visibility

--- a/app/assets/stylesheets/editor.css.scss
+++ b/app/assets/stylesheets/editor.css.scss
@@ -91,7 +91,8 @@ html[data-bs-theme="light"] {
 }
 
 #content-left-sidebar, #content-right-sidebar {
-  max-height: 500px;
+  max-height: 800px;
+  min-height: 250px;
 }
 
 .frame {
